get all enterprise and get enterpriseDetails API